# Axon

./: .gitignore  .golangci.yaml  API_SPEC.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  GETTING_STARTED.md  LICENSE  Makefile  PROPOSAL.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  TASKS.md  config.yaml  debug_api.py  debug_session.py  demo_snapshot.json  go.mod  go.sum  kuralit_snapshot_v2.json  test_kuralit_full_smart.py  test_kuralit_full_v3.py  test_kuralit_premium.py  test_kuralit_tall.py  verify_intent_graph.go  verify_network_blocking.go
Dev Journals/: 01_browser_engine_architecture.md  02_path_to_ultimate_performance.md  03_phase1_performance_recap.md  04_phase2_intelligence_integration.md  05_semantic_resolution_and_x_demo.md  06_areas_for_improvement.md  07_system_metrics.md  08_disruptive_metrics.md
config/: .golangci.yaml  config.yaml
docs/: AGENT_INTERFACE.md  API_SPEC.md  ARCHITECTURE.md  BRIDGE_ARCHITECTURE.md  CONTRIBUTING.md  DATA_SCHEMAS.md  DEPLOYMENT.md  FEATURES.md  GETTING_STARTED.md  INTELLIGENCE_VAULT.md  PHASE2_TEST_REPORT.md  PHASE3_TEST_REPORT.md  PROGRESS.md  PROPOSAL.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  TECH_STACK.md  USE_CASES.md  VISION.md
examples/: main.go
nodejs/: README.md  package-lock.json  package.json
python/: README.md  __init__.py  pyproject.toml
python/axon/: __init__.py  client.py  engine.py  models.py  toolkit.py
python/axon_browser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/examples/: axon_gpt4o_agent.py
scripts/: debug_height.py  demo_snapshot_utf8.json  do_post_hola.py  (+14 more)
(+70 files in other folders)
